force-app/main/default/objects/Jop_application__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <label>Benefits</label>
    <type>TextArea</type>
</CustomField>