force-app/main/default/objects/Jop_application__c/fields/Hiring_Stage__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Stage__c</fullName>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Phone Screen</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
                <color>#0B6FCE</color>
                <label>Hired</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Submit to hiring manager</fullName>
                <isActive>false</isActive>
                <label>Submit to hiring manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>